# openconnect-gui

./: CMakeLists.txt
CMake/Includes/: ProjectExternals.cmake
docs/: dev_commandLine.md
src/: cryptdata.cpp  gtdb.cpp  main.cpp  server_storage.cpp  server_storage.h  vpninfo.cpp
src/Resources/: openconnect-gui.plist.in
src/dialog/: VpnProtocolModel.cpp  editdialog.cpp  editdialog.h  editdialog.ui  mainwindow.cpp  mainwindow.h
